<resources>
    <string name="app_name">Clipzy</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>
    <string name="title_clipboard">Clipboard</string>
    <string name="blank"> </string>
    <string name="test">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="title_activity_clipboard_history">ClipboardHistory</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="offlinedb">Enable Database Sync</string>
    <string name="settings_dbfontsize">Database Font Size</string>
    <string name="settings_mcfontsize">Main Clipboard Font Size</string>
    <string name="settings_tsfontsize">Timestamp Font Size</string>
    <string name="eighteen">18</string>
    <string name="sixteen">16</string>
    <string name="twenty">20</string>
    <string name="twelve">12</string>
</resources>