<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/AlmostBlack"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/nav_history"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/AlmostBlack"
            android:contentDescription="@string/blank"
            app:srcCompat="@drawable/ic_baseline_data_array_24"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/nav_home"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/AlmostBlack"
            android:contentDescription="@string/blank"
            app:srcCompat="@drawable/ic_baseline_text_snippet_24"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/nav_settings"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/AlmostBlack"
            android:contentDescription="@string/blank"
            app:srcCompat="@drawable/ic_baseline_settings_24"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/settingmenus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/AlmostBlack"
        android:padding="12dp">


        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/dbswitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textSize="16sp"
            android:text="@string/offlinedb"
            android:checked="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/settings_mcfontsize"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:height="48dp"
                android:gravity="center_vertical"
                android:text="@string/settings_mcfontsize"
                android:textSize="16sp"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/mcfontsize_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="48dp"
                android:gravity="center"
                android:inputType="number"
                android:minHeight="48dp"
                android:text="@string/twenty"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck"
                android:autofillHints="insert font size (12-20)"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/settings_dbfontsize"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:height="48dp"
                android:gravity="center_vertical"
                android:text="@string/settings_dbfontsize"
                android:textSize="16sp"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/dbfontsize_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="48dp"
                android:gravity="center"
                android:inputType="number"
                android:minHeight="48dp"
                android:text="@string/sixteen"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck"
                android:autofillHints="insert font size (12-20)"
                android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/settings_tsfontsize"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:height="48dp"
                android:gravity="center_vertical"
                android:text="@string/settings_tsfontsize"
                android:textSize="16sp"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/tsfontsize_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="48dp"
                android:gravity="center"
                android:inputType="number"
                android:minHeight="48dp"
                android:text="@string/twelve"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck"
                android:autofillHints="insert font size (12-20)"
                android:textColor="@color/white"
                />
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

